crates/gossamer-diagnostics/tests/snapshots/GT0091.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0091]: `m.range(r)` on a `BTreeMap` reads its bounds from the range written - here
--- framed ---
error[GT0091]: `m.range(r)` on a `BTreeMap` reads its bounds from the range written
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
