crates/gossamer-diagnostics/tests/snapshots/GT0092.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0092]: A field was read from a closure parameter with no annotation, and - here
--- framed ---
error[GT0092]: A field was read from a closure parameter with no annotation, and
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
