crates/gossamer-diagnostics/tests/snapshots/GT0095.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0095]: An `impl` block names one of its own type parameters as its self type - here
--- framed ---
error[GT0095]: An `impl` block names one of its own type parameters as its self type
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
