crates/gossamer-diagnostics/tests/snapshots/GT0098.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0098]: A parameter or return type of a foreign function has no C - here
--- framed ---
error[GT0098]: A parameter or return type of a foreign function has no C
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
