crates/gossamer-diagnostics/tests/snapshots/GT0099.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0099]: An effect-looking attribute (`#[pure]`, `#[readonly]`, `#[effect]`, - here
--- framed ---
error[GT0099]: An effect-looking attribute (`#[pure]`, `#[readonly]`, `#[effect]`,
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
