crates/gossamer-diagnostics/tests/snapshots/GT0100.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0100]: A function declared in an `unsafe extern "C"` block is named as a - here
--- framed ---
error[GT0100]: A function declared in an `unsafe extern "C"` block is named as a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
